; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_run_domtest.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_dom.c_run_domtest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@IID_IPropertyNotifySink = common dso_local global i32 0, align 4
@PropertyNotifySink = common dso_local global i32 0, align 4
@doc_complete = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"ref = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32 (i32*)*)* @run_domtest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_domtest(i8* %0, i32 (i32*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32 (i32*)*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 (i32*)* %1, i32 (i32*)** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32* @create_doc_with_string(i8* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  br label %52

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @set_client_site(i32* %14, i32 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @do_advise(i32* %17, i32* @IID_IPropertyNotifySink, i32* @PropertyNotifySink)
  br label %19

19:                                               ; preds = %27, %13
  %20 = load i32, i32* @doc_complete, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %19
  %23 = call i64 @GetMessageW(i32* %7, i32* null, i32 0, i32 0)
  %24 = icmp ne i64 %23, 0
  br label %25

25:                                               ; preds = %22, %19
  %26 = phi i1 [ false, %19 ], [ %24, %22 ]
  br i1 %26, label %27, label %30

27:                                               ; preds = %25
  %28 = call i32 @TranslateMessage(i32* %7)
  %29 = call i32 @DispatchMessageW(i32* %7)
  br label %19

30:                                               ; preds = %25
  %31 = load i32 (i32*)*, i32 (i32*)** %4, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 %31(i32* %32)
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i32 @set_client_site(i32* %34, i32 %35)
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @IHTMLDocument2_Release(i32* %37)
  store i32 %38, i32* %6, align 4
  %39 = load i32, i32* %6, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %47

41:                                               ; preds = %30
  %42 = load i32, i32* %6, align 4
  %43 = icmp eq i32 %42, 1
  %44 = zext i1 %43 to i32
  %45 = call i64 @broken(i32 %44)
  %46 = icmp ne i64 %45, 0
  br label %47

47:                                               ; preds = %41, %30
  %48 = phi i1 [ true, %30 ], [ %46, %41 ]
  %49 = zext i1 %48 to i32
  %50 = load i32, i32* %6, align 4
  %51 = call i32 @ok(i32 %49, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %50)
  br label %52

52:                                               ; preds = %47, %12
  ret void
}

declare dso_local i32* @create_doc_with_string(i8*) #1

declare dso_local i32 @set_client_site(i32*, i32) #1

declare dso_local i32 @do_advise(i32*, i32*, i32*) #1

declare dso_local i64 @GetMessageW(i32*, i32*, i32, i32) #1

declare dso_local i32 @TranslateMessage(i32*) #1

declare dso_local i32 @DispatchMessageW(i32*) #1

declare dso_local i32 @IHTMLDocument2_Release(i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i64 @broken(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
